# Game_Of_Life

./: .gitignore  CMakeLists.txt  README.md  setup.sh
src/: board.cpp  board.hpp  main.cpp
